
I did not touch any of the imageclasses. Either I
modify all the ones that needed colormods or not,
I won't commit a half finished job.

I threw out all the borders that used colormods.

I haven't really  understood what that epplet stuff is
all about, (I'm not fully up to date on the list right
now), so I mostly copied from dialog widgets. But at
least there's something there now.

That's all I can do at the moment. If anybody sees
the need to change anything, please feel free to do so!
I'll be back on monday.

Have fun,
-- Christian. 

-------------------------------------------------------------------------------

Fri Oct  8 18:53:09 EST 1999
(Christian)

Uhmm .. _now_ there's no more buttons.cfg. Sorry :)

-------------------------------------------------------------------------------

Fri Oct  8 22:46:54 PDT 1999
(Mandrake)

I've gone through and put all the people in the AUTHORS file in the 
documentation.  updated the documentation some (now it all fits on one page in
a couple of key places) including the credits in the documentation.  I don't
want anyone that has been recognized to feel like they got credit left out.
If you've contributed patches and don't see your name listed - you NEED to 
let me know ASAP.  if you don't let me know in the next couple of days you
probably won't be in the 0.16.0 release's credits.  (sorry)

-------------------------------------------------------------------------------

Sat Oct  9 10:10:52 PDT 1999
(Mandrake)

groups patch from Martin Tyler

-------------------------------------------------------------------------------

Sat Oct  9 11:30:58 PDT 1999
(Mandrake)

fixed simon's name in ipc call, authors, and docomentation

-------------------------------------------------------------------------------

Sat Oct  9 12:54:21 PDT 1999
(Mandrake)

minor dock patch

-------------------------------------------------------------------------------

Sat Oct  9 15:07:18 PDT 1999
(Raster)

re-install default cmap whne mensu pop up